8147121: Evacuation failure allocation statistics added too late

Move adding evacuation failure statistics to after free_collection_set.

Reviewed-by: brutisso, drwhite